# llmdiff

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
llmdiff/: cli.py  config.py  differ.py  metrics.py  runner.py
llmdiff/renderers/: html.py  json_.py  terminal.py
tests/: test_cli.py  test_config.py  test_differ.py  test_html_renderer.py  test_metrics.py  test_renderers.py  test_runner.py  test_terminal_renderer.py
tests/fixtures/: cases.json
