[project]
name = "llmdiff"
version = "0.1.0"
description = "git diff for LLM prompts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["llm", "prompt-engineering", "cli", "developer-tools", "ollama"]
authors = [{ name = "Utsab Dahal", email = "your@email.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/meutsabdahal/llmdiff"
Repository = "https://github.com/meutsabdahal/llmdiff"
Issues = "https://github.com/meutsabdahal/llmdiff/issues"
