[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmdiff-cli"
version = "0.1.0"
description = "git diff for LLM prompts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["llm", "prompt-engineering", "cli", "developer-tools", "ollama"]
authors = [{ name = "Utsab Dahal", email = "utsabdahal190@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["typer>=0.12", "pydantic>=2.0", "httpx>=0.27", "rich>=13.0"]

[project.optional-dependencies]
semantic = ["sentence-transformers>=3.0"]

[project.urls]
Homepage = "https://github.com/meutsabdahal/llmdiff"
Repository = "https://github.com/meutsabdahal/llmdiff"
Issues = "https://github.com/meutsabdahal/llmdiff/issues"

[project.scripts]
llmdiff = "llmdiff.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "twine>=5.1",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# Keep CI lint focused on high-signal correctness issues.
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.10"
files = ["llmdiff"]
namespace_packages = true
explicit_package_bases = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["llmdiff.runner"]
disable_error_code = ["arg-type", "index"]

[tool.hatch.build.targets.wheel]
packages = ["llmdiff"]

[tool.hatch.build.targets.sdist]
exclude = ["tests/", ".github/", "*.png", "*.gif"]
